# backend/handlers.go
@@ -17,6 +17,7 @@ import (
 // @Tags Tasks
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Success 200 {array} Task "Список задач"
 // @Failure 500 {object} gin.H "Ошибка сервера"
 // @Router /tasks [get]
@@ -42,6 +43,7 @@ func GetTasks(c *gin.Context) {
 // @Success 201 {object} Task "Созданная задача"
 // @Failure 400 {object} gin.H "Некорректные данные"
 // @Failure 500 {object} gin.H "Ошибка сервера"
+// @Security BearerAuth
 // @Router /tasks [post]
 func CreateTask(c *gin.Context) {
 	var task Task
@@ -72,6 +74,7 @@ func CreateTask(c *gin.Context) {
 // @Success 200 {object} gin.H "Сообщение об успешном обновлении"
 // @Failure 400 {object} gin.H "Некорректные данные"
 // @Failure 500 {object} gin.H "Ошибка сервера"
+// @Security BearerAuth
 // @Router /tasks/{id} [put]
 func UpdateTask(c *gin.Context) {
 	id := c.Param("id")
@@ -101,6 +104,7 @@ func UpdateTask(c *gin.Context) {
 // @Param id path string true "ID задачи"
 // @Success 200 {object} gin.H "Сообщение об успешном удалении"
 // @Failure 500 {object} gin.H "Ошибка сервера"
+// @Security BearerAuth
 // @Router /tasks/{id} [delete]
 func DeleteTask(c *gin.Context) {
 	id := c.Param("id")
